# bpp-speech

./: -voice rms  .coveragerc  MANIFEST.in  README.md  bpp_button.service  licences.ini  mic_check.py  record_sample.py  requirements.txt  setup.cfg  setup.py  tox.ini
src/: bpp_speech_recognition.py  manual_test_speech_recognition.py  mic_check.py  mic_recognition_benchmark.py
src/bpp_speech/: bpp_btn.py  bpp_button.py  bpp_speech_recognition.py  speech_feedback.py
src/bpp_speech_to_text/: bpp_btn_callback.py  bpp_button.py  bpp_speech_recognition.py  manual_test_speech_recognition.py  mic_check.py  record_sample.py
test/data/: test_config.json
test/manual/: mic_recognition_benchmark.py
test/unit/: test_config.py  test_package.py
