[metadata]
name = bpp_speech_to_text
description = BPP voice command recognition
long_description = files: README.md
url = https://github.com/tszyrowski/bpp-speech-to-text
maintainer = SoftOcean
maintainer_email = SoftOceanLtd@gmail.com
license = Apache 2

[options]
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    SpeechRecognition

[options.packages.find]
where = src


[options.entry_points]
console_scripts =
    bpp_button = bpp_speech_to_text.bpp_button:btn_listening
